# Nebula

./: .env  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 40dc3236d46b_add_users_table.py  559c1f4a2aef_create_notices_table.py
app/config/: database.py  settings.py
app/dependencies/: auth.py
app/models/: __init__.py  notice.py  user.py
app/routers/: auth.py  board.py  notice.py
app/schemas/: notice.py  user.py
app/services/: notice_service.py  user_service.py
app/utils/: jwt.py  md_renderer.py  pagination.py  security.py  slug.py
docs/: architecture.md  changelog.md  changlog.md  roadmap.md
static/css/: glass.css  theme.css
static/js/: theme.js
templates/: base.html  board.html  navbar.html  notice_detail.html  notice_form.html
