[project]
name = "nebula"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bleach>=6.4.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.138.0",
    "markdown>=3.10.2",
    "pydantic-settings>=2.14.2",
    "sqlmodel>=0.0.39",
]
