[project]
name = "nebula"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "alembic>=1.18.5",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "bleach>=6.4.0",
    "email-validator>=2.1.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.138.0",
    "markdown>=3.10.2",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.8.0",
    "sqlmodel>=0.0.39",
]
